Fix profile intro section spacing

--- a/app/assets/stylesheets/components/_profile_body.scss
+++ b/app/assets/stylesheets/components/_profile_body.scss
@@ -74,8 +74,8 @@
       }
 
       span {
-        margin-left: 4px;
         font-weight: 550;
+        font-size: 14px;
       }
     }
   }
